--- a/app/src/main/res/layout/fragment_disciplines.xml
+++ b/app/src/main/res/layout/fragment_disciplines.xml
@@ -7,16 +7,52 @@
     tools:context=".ui.fragment.disciplinesFragment.DisciplinesFragment">
 
 
-    <com.google.android.material.materialswitch.MaterialSwitch
-        android:id="@+id/disciplineFragment_switch_favorite"
+<!--    <com.google.android.material.materialswitch.MaterialSwitch-->
+<!--        android:id="@+id/disciplineFragment_switch_favorite"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="@dimen/switch_margin"-->
+<!--        android:checked="false"-->
+<!--        android:text="@string/discipline_fragment_switch_favorite_label"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/disciplinesFragment_recyclerView"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/disciplinesFragment_buttonToggleGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/switch_margin"
-        android:checked="false"
-        android:text="@string/discipline_fragment_switch_favorite_label"
-        app:layout_constraintBottom_toTopOf="@id/disciplinesFragment_recyclerView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        app:checkedButton="@id/disciplinesFragment_toggle_button_all">
+
+        <Button
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+            android:id="@+id/disciplinesFragment_toggle_button_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon = "@drawable/ic_list"
+            />
+        <Button
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+            android:id="@+id/disciplinesFragment_toggle_button_favorites"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon = "@drawable/ic_favorite_outlined"
+            />
+
+        <Button
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+            android:id="@+id/disciplinesFragment_toggle_button_completed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon = "@drawable/ic_check_list"
+
+            />
+    </com.google.android.material.button.MaterialButtonToggleGroup>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/disciplinesFragment_recyclerView"
@@ -25,7 +61,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/disciplineFragment_switch_favorite"
+        app:layout_constraintTop_toBottomOf="@id/disciplinesFragment_buttonToggleGroup"
         tools:listitem="@layout/discipline_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
