--- a/app/src/main/res/layout/fragment_discipline_form.xml
+++ b/app/src/main/res/layout/fragment_discipline_form.xml
@@ -120,6 +120,15 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+<!--        <Spinner-->
+<!--            android:id="@+id/spinner"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/discipline_form_fragment_textfield_email"-->
+<!--            android:layout_margin="@dimen/margin_default"/>-->
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/discipline_form_fragment_textfield_email_type"
             android:layout_height="wrap_content"
