--- a/app/src/main/res/layout/discipline_item.xml
+++ b/app/src/main/res/layout/discipline_item.xml
@@ -1,48 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/principal">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/discipline_item_height"
+    android:background="#E1D7C6">
 
-        <TextView
-            android:id="@+id/disciplineItem_name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/disciplineItem_shapeableImageView"
-            app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_favorite"
-            style="@style/textviewColorWhite"
-            android:gravity="center"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:layout_margin="@dimen/textview_margin_default"
-            android:textSize="@dimen/bigTextSize"/>
-
+    <TextView
+        android:id="@+id/disciplineItem_textView_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/textview_margin_default"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxLines="2"
+        android:textSize="@dimen/bigTextSize"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_favorite"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_shapeableImageView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/disciplineItem_imageView_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_default"
+        android:contentDescription="@string/discipline_item_img_content_desc_favorite"
         android:src="@drawable/ic_favorite_filled"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/disciplineItem_name"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="@dimen/margin_default"
-        android:contentDescription="@string/disciplines_fragment_img_content_desc_favorite" />
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_textView_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/disciplineItem_imageView_completed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_check_circle_filled"
+        app:layout_constraintTop_toBottomOf="@id/disciplineItem_imageView_favorite"
+        app:layout_constraintEnd_toEndOf="@id/disciplineItem_imageView_favorite"
+        app:layout_constraintStart_toStartOf="@id/disciplineItem_imageView_favorite"
+        android:layout_marginTop="@dimen/margin_default"
+        android:contentDescription="@string/discipline_item_img_content_desc_completed"/>
+
+    <TextView
+        android:id="@+id/disciplineItem_textView_Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/defaultTextSize"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_name"
+        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
+        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
+        android:layout_margin="@dimen/textview_margin_default"
+        tools:text="14 de fevereiro até a de março"
+        android:maxLines="1"/>
+
+
+    <TextView
+        android:id="@+id/disciplineItem_textView_startTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineItem_imageView_clock"
+        android:layout_marginHorizontal="@dimen/textview_margin_default"
+        android:text="@string/discipline_item_textView_empty_time"/>
+
+    <ImageView
+
+        android:id="@+id/disciplineItem_imageView_clock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
+        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
+        android:src="@drawable/ic_clock"
+        app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_Date"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+    <TextView
+        android:id="@+id/disciplineItem_textView_endTime"
+        app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineItem_imageView_clock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/textview_margin_default"
+        android:text="@string/discipline_item_textView_empty_time"/>
+
+
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/disciplineItem_shapeableImageView"
         style="@style/shapeableImageView"
+        android:contentDescription="@string/disciplines_fragment_img_content_desc_discipline"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_textView_name"
         app:layout_constraintStart_toStartOf="parent"
-        tools:src="@tools:sample/backgrounds/scenic"
-        app:layout_constraintEnd_toStartOf="@id/disciplineItem_name"
+        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
-        android:contentDescription="@string/disciplines_fragment_img_content_desc_discipline"
-        />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        tools:src="@tools:sample/backgrounds/scenic"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
