--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,17 +15,19 @@
     </style>
 
 
-    <style name="textviewColorWhite">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
+<!--    <style name="textviewColorWhite">-->
+<!--        <item name="android:layout_width">0dp</item>-->
+<!--        <item name="android:layout_height">wrap_content</item>-->
+<!--        <item name="android:textColor">@color/white</item>-->
+<!--    </style>-->
 
-    <style name="textviewColorSecondary">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/secondary</item>
-    </style>
+<!--    <style name="textviewColorSecondary">-->
+<!--        <item name="android:layout_width">0dp</item>-->
+<!--        <item name="android:layout_height">wrap_content</item>-->
+<!--        <item name="android:textColor">@color/secondary</item>-->
+<!--    </style>-->
+
+
 
     <style name="shapeableImageView">
         <item name="android:layout_width">@dimen/shapeableImageView_default_width</item>
