--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,18 +2,20 @@
     <!-- Base application theme. -->
     <style name="Theme.StudentDiary" parent="Theme.Material3.DayNight.NoActionBar">
          Primary brand color.
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
+
+        <item name= "colorOnPrimary">#FFFFFFFF</item>
+        <item name="colorPrimary">#579bb1</item>
+        <item name="colorPrimaryVariant">#CA1818</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">#28C728</item>
         <!-- Status bar color. -->
 <!--        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
         <!-- Customize your theme here. -->
 
 
-        <item name="colorPrimaryContainer">@color/colorPrimaryContainer</item>
+        <item name="colorPrimaryContainer">#396b81</item>
         <item name="colorOnPrimaryContainer">@color/colorOnPrimaryContainer</item>
 
 
@@ -25,14 +27,26 @@
         colorOnSurfaceVariant
 
 <!--    </style>-->
-        <item name="colorSecondaryContainer">#50AE5D</item>
+
+
+<!--        <item name="colorSecondaryContainer">#E1D7C6</item>-->
+<!--        <item name="colorOnSecondaryContainer">#3B77CF</item>-->
+<!--        <item name="colorTertiaryContainer">#396b81</item>-->
+<!--        <item name="colorOnTertiaryContainer">#D3BF06</item>-->
+<!--        <item name="colorSurface">#E1D7C6</item>-->
+<!--        <item name="colorOnSurface">#FFFFFF</item>-->
+<!--        <item name="colorOnSurfaceVariant">#FFFFFF</item>-->
+<!--        <item name="colorOutline">#E1D7C6</item>-->
+
+
+        <item name="colorSecondaryContainer">#FFFFFF</item>
         <item name="colorOnSecondaryContainer">#3B77CF</item>
         <item name="colorTertiaryContainer">#962DC3</item>
         <item name="colorOnTertiaryContainer">#D3BF06</item>
-        <item name="colorSurface">#E86942</item>
-        <item name="colorOnSurface">#0041E3</item>
-        <item name="colorOnSurfaceVariant">#640F6A</item>
-        <item name="colorOutline">#19D5C5</item>
+        <item name="colorSurface">#E1D7C6</item>
+        <item name="colorOnSurface">#579bb1</item>
+        <item name="colorOnSurfaceVariant">#FFFFFF</item>
+        <item name="colorOutline">#396b81</item>
 
     </style>
 
