--- a/app/src/main/res/layout/discipline_item.xml
+++ b/app/src/main/res/layout/discipline_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/discipline_item_height"
+    android:layout_height="wrap_content"
     android:background="#E1D7C6">
 
     <TextView
@@ -17,7 +17,8 @@
         android:textSize="@dimen/bigTextSize"
         app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_favorite"
         app:layout_constraintStart_toEndOf="@id/disciplineItem_shapeableImageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Matemática segundo grau " />
 
     <ImageView
         android:id="@+id/disciplineItem_imageView_favorite"
@@ -26,67 +27,66 @@
         android:layout_margin="@dimen/margin_default"
         android:contentDescription="@string/discipline_item_img_content_desc_favorite"
         android:src="@drawable/ic_favorite_filled"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/disciplineItem_textView_name"
+       app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/disciplineItem_imageView_completed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+       android:layout_margin="@dimen/margin_default"
+        android:contentDescription="@string/discipline_item_img_content_desc_completed"
         android:src="@drawable/ic_check_circle_filled"
-        app:layout_constraintTop_toBottomOf="@id/disciplineItem_imageView_favorite"
-        app:layout_constraintEnd_toEndOf="@id/disciplineItem_imageView_favorite"
-        app:layout_constraintStart_toStartOf="@id/disciplineItem_imageView_favorite"
-        android:layout_marginTop="@dimen/margin_default"
-        android:contentDescription="@string/discipline_item_img_content_desc_completed"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/disciplineItem_imageView_favorite" />
 
     <TextView
         android:id="@+id/disciplineItem_textView_Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/defaultTextSize"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_name"
-        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
-        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
         android:layout_margin="@dimen/textview_margin_default"
-        tools:text="14 de fevereiro até a de março"
-        android:maxLines="1"/>
+        android:gravity="center"
+        android:maxLines="1"
+        android:textSize="@dimen/defaultTextSize"
+        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
+        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
+        app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_name"
+        tools:text="14 de fevereiro até a de março" />
 
 
     <TextView
         android:id="@+id/disciplineItem_textView_startTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_clock"
-        app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock"
-        app:layout_constraintBottom_toBottomOf="@id/disciplineItem_imageView_clock"
         android:layout_marginHorizontal="@dimen/textview_margin_default"
-        android:text="@string/discipline_item_textView_empty_time"/>
+        android:text="@string/discipline_item_textView_empty_time"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock" />
 
     <ImageView
 
         android:id="@+id/disciplineItem_imageView_clock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
-        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
         android:src="@drawable/ic_clock"
-        app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_Date"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_margin="@dimen/small_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
+        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
+        app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_Date" />
 
 
     <TextView
         android:id="@+id/disciplineItem_textView_endTime"
-        app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock"
-        app:layout_constraintStart_toEndOf="@id/disciplineItem_imageView_clock"
-        app:layout_constraintBottom_toBottomOf="@id/disciplineItem_imageView_clock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/textview_margin_default"
-        android:text="@string/discipline_item_textView_empty_time"/>
-
+        android:text="@string/discipline_item_textView_empty_time"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_imageView_clock"
+        app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock" />
 
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -99,6 +99,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
-        tools:src="@tools:sample/backgrounds/scenic"/>
+        tools:src="@tools:sample/backgrounds/scenic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
