--- a/app/src/main/res/layout/fragment_disciplines.xml
+++ b/app/src/main/res/layout/fragment_disciplines.xml
@@ -4,45 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.disciplinesFragment.DisciplinesFragment"
-    android:background="@drawable/background_gradient">
+    android:background="@drawable/background_gradient"
+    tools:context=".ui.fragment.disciplinesFragment.DisciplinesFragment">
 
 
     <com.google.android.material.button.MaterialButtonToggleGroup
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/disciplinesFragment_buttonToggleGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:singleSelection="true"
-        app:selectionRequired="true"
-        app:layout_constraintBottom_toTopOf="@id/disciplinesFragment_recyclerView"
         android:layout_margin="@dimen/margin_default"
-        app:checkedButton="@id/disciplinesFragment_toggle_button_all">
+        app:checkedButton="@id/disciplinesFragment_toggle_button_all"
+        app:layout_constraintBottom_toTopOf="@id/disciplinesFragment_recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:selectionRequired="true"
+        app:singleSelection="true">
 
         <Button
-            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
             android:id="@+id/disciplinesFragment_toggle_button_all"
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon = "@drawable/ic_list"
-            />
+            app:icon="@drawable/ic_list" />
+
         <Button
-            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
             android:id="@+id/disciplinesFragment_toggle_button_favorites"
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon = "@drawable/ic_favorite_outlined"
-            />
+            app:icon="@drawable/ic_favorite_filled" />
 
         <Button
-            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
             android:id="@+id/disciplinesFragment_toggle_button_completed"
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon = "@drawable/ic_check_list"
+            app:icon="@drawable/ic_check_list" />
 
-            />
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
     <androidx.recyclerview.widget.RecyclerView
