--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
 
     <dimen name="default_margin_items_header_drawer">24dp</dimen>
 
-    <dimen name="discipline_item_height">100dp</dimen>
+    <dimen name="discipline_item_height">130dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
 
 </resources>
