--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
 
     <color name="customRed">#B42B51</color>
     <color name="customGreen">#87CBB9</color>
+    <color name="lightBlue">#dcedf1</color>
 </resources>
