--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,9 @@
 
     </style>
 
+    <style name="popupMenuStyle" parent="Widget.Material3.PopupMenu">
+        <item name="android:popupBackground">@drawable/popup_menu_background</item>
+    </style>
 
 <!--    <style name="textviewColorWhite">-->
 <!--        <item name="android:layout_width">0dp</item>-->
