--- a/app/src/main/res/layout/discipline_item.xml
+++ b/app/src/main/res/layout/discipline_item.xml
@@ -15,10 +15,17 @@
         android:gravity="center"
         android:maxLines="2"
         android:textSize="@dimen/bigTextSize"
-        app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_favorite"
-        app:layout_constraintStart_toEndOf="@id/disciplineItem_shapeableImageView"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_guideline_end"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_guideline_start"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Matemática segundo grau " />
+        tools:text="bbc fdgf gfdgfdgfg gfd g gfg fg gfdg  " />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/disciplineItem_guideline_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="@dimen/discipline_item_guideline_end_percent"/>
 
     <ImageView
         android:id="@+id/disciplineItem_imageView_favorite"
@@ -28,7 +35,7 @@
         android:contentDescription="@string/discipline_item_img_content_desc_favorite"
         android:src="@drawable/ic_favorite_filled"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/disciplineItem_textView_name"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_guideline_end"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -38,6 +45,7 @@
         android:layout_margin="@dimen/margin_default"
         android:contentDescription="@string/discipline_item_img_content_desc_completed"
         android:src="@drawable/ic_check_circle_filled"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_guideline_end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/disciplineItem_imageView_favorite" />
 
@@ -49,8 +57,8 @@
         android:gravity="center"
         android:maxLines="1"
         android:textSize="@dimen/defaultTextSize"
-        app:layout_constraintEnd_toStartOf="@id/disciplineItem_imageView_favorite"
-        app:layout_constraintStart_toEndOf="@id/disciplineItem_shapeableImageView"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_guideline_end"
+        app:layout_constraintStart_toEndOf="@id/disciplineItem_guideline_start"
         app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_name"
         tools:text="14 de fevereiro de 2023 até a de março" />
 
@@ -88,6 +96,13 @@
         app:layout_constraintStart_toEndOf="@id/disciplineItem_imageView_clock"
         app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/disciplineItem_guideline_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="@dimen/discipline_item_guideline_start_percent"/>
+
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/disciplineItem_shapeableImageView"
@@ -95,7 +110,7 @@
         android:contentDescription="@string/disciplines_fragment_img_content_desc_discipline"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/disciplineItem_textView_name"
+        app:layout_constraintEnd_toStartOf="@id/disciplineItem_guideline_start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
