--- a/app/src/main/res/layout/discipline_item.xml
+++ b/app/src/main/res/layout/discipline_item.xml
@@ -74,15 +74,14 @@
         app:layout_constraintTop_toTopOf="@id/disciplineItem_imageView_clock" />
 
     <ImageView
-
         android:id="@+id/disciplineItem_imageView_clock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
         android:src="@drawable/ic_clock"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/disciplineItem_textView_name"
-        app:layout_constraintStart_toStartOf="@id/disciplineItem_textView_name"
+        app:layout_constraintEnd_toEndOf="@id/disciplineItem_guideline_end"
+        app:layout_constraintStart_toStartOf="@id/disciplineItem_guideline_start"
         app:layout_constraintTop_toBottomOf="@id/disciplineItem_textView_Date" />
 
 
@@ -114,6 +113,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        android:src="@drawable/placeholder"
+        android:maxWidth="80dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
