--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -52,39 +52,113 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_login_textfield_password" />
 
+<!--        <Button-->
+<!--            android:id="@+id/fragment_login_registerButton"-->
+<!--            style="@style/elevationButton"-->
+<!--            android:text="@string/login_fragment_registerButton"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/fragment_login_loginButton"/>-->
 
-
-        <Button
-            android:id="@+id/fragment_login_registerButton"
-            style="@style/elevationButton"
-            android:text="@string/login_fragment_registerButton"
-            app:layout_constraintEnd_toEndOf="parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/fragment_login_textView_or"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_loginButton"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="@dimen/margin_default"
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_loginButton"
+            android:layout_marginHorizontal="@dimen/defaultTextSize"
+            android:text="@string/common_or"/>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/login_fragment_divider_left_on_textView"
+            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_or"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_login_textView_or"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fragment_login_textView_or"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/small_margin"/>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/login_fragment_divider_right_on_textView"
+            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_or"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_login_textView_or"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fragment_login_textView_or"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"/>
 
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/fragment_login_signin_googleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_default"
+            android:layout_margin="@dimen/margin_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_registerButton"
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_textView_or"
             />
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/fragment_login_signin_FacebookButton"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_signin_googleButton"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/margin_default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_signin_googleButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/fragment_login_guideline_horizontal_bottom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="@dimen/fragment_login_guideline_horizontal_bottom_percent"
+            android:orientation="horizontal"
+            />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/fragment_login_guideline_vertical_center"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="@dimen/fragment_login_guideline_vertical_center_percent"/>
 
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/fragment_login_divider_bottom"
+            app:layout_constraintTop_toTopOf="@id/fragment_login_guideline_horizontal_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_login_guideline_horizontal_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/fragment_login_textView_not_have_an_account_question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/fragment_login_textView_register"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_login_textView_register"
+            app:layout_constraintEnd_toStartOf="@id/fragment_login_textView_register"
+            app:layout_constraintStart_toStartOf="@id/fragment_login_guideline_vertical_center"
+            android:text="@string/login_fragment_textView_label_not_have_an_account_question"
+            android:textSize="@dimen/defaultTextSize"
+           />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/fragment_login_textView_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/fragment_login_textView_not_have_an_account_question"
+            app:layout_constraintEnd_toEndOf="@id/fragment_login_guideline_vertical_center"
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_divider_bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/login_fragment_textView_label_register"
+            android:layout_margin="@dimen/textview_margin_default"
+            android:textSize="@dimen/defaultTextSize"
+            android:textStyle="bold"
+            android:textColor="@color/darkBlue"
+           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
